--- a/about.html
+++ b/about.html
@@ -131,13 +131,13 @@
             Amity International Model United Nations
           </h1>
           <p class="lead my-3">
-            The first E-edition of Amity International Model United Nations is a
+            The first e-Edition of Amity International Model United Nations is a
             simulation of the United Nations spanning over two days. At AMIMUN,
             delegates gain profound knowledge of diplomacy, global relations,
             and the inner workings of the United Nations. Through the past nine
             editions, AMIMUN has set a standard of MUNs throughout the Nation
             with its innovative themes. To continue the same legacy, the first
-            E-edition of AMIMUN aims to create a platform where deliberation on
+            e-Edition of AMIMUN aims to create a platform where deliberation on
             issues that address global problems and drafting resolutions will
             enhance critical thinking, public speaking, and leadership skills.
             Delegates will become conscious of the causes of conflict between
@@ -281,7 +281,7 @@
             <b>Our Vision</b> in Building the country and the general public is
             through giving collective, coordinated, and trans-social quality
             teaching and to be the worldwide leader in worth training and
-            supporting ability where Modernity Blends with Tradition.
+            supporting ability where <em>Modernity Blends with Tradition.</em> <br>
             <b>Our Mission</b> is to give education at all levels in all panels
             of current and modern events, developing frontier areas of
             knowledge, learning, and research and examination to build up the
@@ -371,7 +371,7 @@
           <div class="col-md-7 order-md-2">
             <h2 class="featurette-heading">
               Expanding Horizons
-              <span class="text-muted">Of Knowledge</span>
+              <span class="text-muted">of Knowledge</span>
             </h2>
             <p class="lead">
               Amity University is driven by research and innovation and ensures
