--- a/contact.html
+++ b/contact.html
@@ -134,9 +134,10 @@
         <div class="px-0">
           <h1 class="display-4 font-italic">Contact Us</h1>
           <p class="lead my-3">
-            Multiple lines of text that form the lede, informing new readers
-            quickly and efficiently about what’s most interesting in this post’s
-            contents.
+            We encourage you to stay in touch with us on social media! It is the
+            best way to keep track of conference updates, position applications,
+            and more. When you register, the team will automatically be in touch
+            with you.
           </p>
         </div>
       </div>
@@ -144,21 +145,24 @@
       <!-- Second Row [Team]-->
       <section class="container rounded" style="background: #fff">
         <div class="row p-5 mb-4">
-          
-          <div class="col-lg-4 col-md-6 mb-4 mb-lg-0 d-flex align-items-stretch">
+          <div
+            class="col-lg-4 col-md-6 mb-4 mb-lg-0"
+          >
             <!-- Card-->
             <div class="card shadow-lg border-0 rounded">
               <div class="card-body p-0">
-                <img
+                <!-- <img
                   src="./static/mesh-contact.jpeg"
                   alt=""
                   class="w-100 card-img-top"
-                />
+                /> -->
                 <div class="p-4">
                   <h5 class="mb-0">Meshuwa K. Mawthoh</h5>
                   <p class="small text-muted">Phone: +91 7085490761</p>
-                  <p class="small text-muted">Email: meshuwa.mawthoh@student.amity.edu</p>
-                  <ul class="social mb-0 list-inline mt-3">
+                  <p class="small text-muted">
+                    Email: meshuwa.mawthoh@student.amity.edu
+                  </p>
+                  <!-- <ul class="social mb-0 list-inline mt-3">
                     <li class="list-inline-item m-0">
                       <a href="#" class="social-link"
                         ><i class="fa fa-facebook-f"></i
@@ -179,26 +183,30 @@
                         ><i class="fa fa-linkedin"></i
                       ></a>
                     </li>
-                  </ul>
+                  </ul> -->
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 mb-4 mb-lg-0 d-flex align-items-stretch">
+          <div
+            class="col-lg-4 col-md-6 mb-4 mb-lg-0"
+          >
             <!-- Card-->
             <div class="card shadow-lg border-0 rounded">
               <div class="card-body p-0">
-                <img
+                <!-- <img
                   src="./static/Simran Malhotra.jpg"
                   alt=""
                   class="w-100 card-img-top"
-                />
+                /> -->
                 <div class="p-4">
                   <h5 class="mb-0">Simran Malhotra</h5>
                   <p class="small text-muted">Phone: +91 9999090695</p>
-                  <p class="small text-muted">Email: simran.malhotra3@student.amity.edu</p>
-                  <ul class="social mb-0 list-inline mt-3">
+                  <p class="small text-muted">
+                    Email: simran.malhotra3@student.amity.edu
+                  </p>
+                  <!-- <ul class="social mb-0 list-inline mt-3">
                     <li class="list-inline-item m-0">
                       <a href="#" class="social-link"
                         ><i class="fa fa-facebook-f"></i
@@ -219,26 +227,30 @@
                         ><i class="fa fa-linkedin"></i
                       ></a>
                     </li>
-                  </ul>
+                  </ul> -->
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 mb-4 mb-lg-0 d-flex align-items-stretch">
+          <div
+            class="col-lg-4 col-md-6 mb-4 mb-lg-0"
+          >
             <!-- Card-->
             <div class="card shadow-lg border-0 rounded">
               <div class="card-body p-0">
-                <img
+                <!-- <img
                   src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-2_ujssbj.jpg"
                   alt=""
                   class="w-100 card-img-top"
-                />
+                /> -->
                 <div class="p-4">
                   <h5 class="mb-0">Rohan Nagpal</h5>
                   <p class="small text-muted">Phone: +91 9599441919</p>
-                  <p class="small text-muted">Email: rohan.nagpal@s.amity.edu</p>
-                  <ul class="social mb-0 list-inline mt-3">
+                  <p class="small text-muted">
+                    Email: rohan.nagpal@s.amity.edu
+                  </p>
+                  <!-- <ul class="social mb-0 list-inline mt-3">
                     <li class="list-inline-item m-0">
                       <a href="#" class="social-link"
                         ><i class="fa fa-facebook-f"></i
@@ -259,26 +271,30 @@
                         ><i class="fa fa-linkedin"></i
                       ></a>
                     </li>
-                  </ul>
+                  </ul> -->
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 mb-4 mb-lg-0 mt-5 d-flex align-items-stretch">
+          <div
+            class="col-lg-4 col-md-6 mb-4 mb-lg-0 mt-5"
+          >
             <!-- Card-->
             <div class="card shadow-lg border-0 rounded">
               <div class="card-body p-0">
-                <img
+                <!-- <img
                   src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-2_ujssbj.jpg"
                   alt=""
                   class="w-100 card-img-top"
-                />
+                /> -->
                 <div class="p-4">
                   <h5 class="mb-0">Shubhangi Thakur</h5>
                   <p class="small text-muted">Phone: +91 8700659269</p>
-                  <p class="small text-muted">Email: shubhangi.thakur1@student.amity.edu</p>
-                  <ul class="social mb-0 list-inline mt-3">
+                  <p class="small text-muted">
+                    Email: shubhangi.thakur1@student.amity.edu
+                  </p>
+                  <!-- <ul class="social mb-0 list-inline mt-3">
                     <li class="list-inline-item m-0">
                       <a href="#" class="social-link"
                         ><i class="fa fa-facebook-f"></i
@@ -299,7 +315,7 @@
                         ><i class="fa fa-linkedin"></i
                       ></a>
                     </li>
-                  </ul>
+                  </ul> -->
                 </div>
               </div>
             </div>
