--- a/index.html
+++ b/index.html
@@ -277,31 +277,32 @@
                 actuated and go into the correct direction, I invite you to the
                 first edition of online
                 <b>Amity International Model United Nations, (AMIMUN '21)</b> on
-                Saturday, March 20th to Sunday, March 21st ,2021.<br /> By
-                following the legacy and success of previous editions, AMIMUN
+                Saturday, March 20th to Sunday, March 21st ,2021.<br />
+                By following the legacy and success of previous editions, AMIMUN
                 has set a bar within the Indian Mun circuit with an
                 International base of participants. The secretariat of
                 AMIMUN’2021 hopes to follow the same path and bring you an
                 unparalleled debating experience while adapting to the current
-                world order.<br> Amity International Model United Nations Conference
-                2021 is a platform for a boundless learning experience and a
-                place to voice your suppositions, opinions while learning the
-                skills of diplomacy. Through this conference, we wish that you
-                experience the most captivating moments whilst sensitizing
-                yourself with the dynamic changes that the world is going
-                through today and encourage the highest calibre of discussion.
-                We look forward to the fervour and enthusiasm which the
-                delegates will bring with them thereby giving an encompassing
-                comprehensive experience and highlighting issues to deliberate
-                upon for a better future of humankind.<br> I would also like to take
-                this opportunity to thank our Founder President Sir, our Faculty
-                Coordinators, our Partners and Sponsors for their unremitting
-                support for E-AMIMUN '21, and making this conference
-                possible. On behalf of the secretariat, I extend a warm
-                invitation to all delegates and hope this conference will be as
-                productive for you, both as an individual and as a delegate. For
-                any queries or concerns kindly feel free to reach out to us, we
-                would be glad to assist you.
+                world order.<br />
+                Amity International Model United Nations Conference 2021 is a
+                platform for a boundless learning experience and a place to
+                voice your suppositions, opinions while learning the skills of
+                diplomacy. Through this conference, we wish that you experience
+                the most captivating moments whilst sensitizing yourself with
+                the dynamic changes that the world is going through today and
+                encourage the highest calibre of discussion. We look forward to
+                the fervour and enthusiasm which the delegates will bring with
+                them thereby giving an encompassing comprehensive experience and
+                highlighting issues to deliberate upon for a better future of
+                humankind.<br />
+                I would also like to take this opportunity to thank our Founder
+                President Sir, our Faculty Coordinators, our Partners and
+                Sponsors for their unremitting support for e-AMIMUN '21, and
+                making this conference possible. On behalf of the secretariat, I
+                extend a warm invitation to all delegates and hope this
+                conference will be as productive for you, both as an individual
+                and as a delegate. For any queries or concerns kindly feel free
+                to reach out to us, we would be glad to assist you.
               </p>
 
               <p class="text-muted">
@@ -321,14 +322,16 @@
               </div>
             </div>
             <div class="img-fluid col-auto d-none d-lg-block p-3 rounded">
-              <img class="rounded" src="./static/mesh.jpeg" alt="" />
+              <img class="rounded" src="./static/mesh.JPG" alt="" />
             </div>
           </div>
         </div>
+        <hr class="featurette-divider mt-5" />
+
         <!-- START THE FEATURETTES -->
         <div class="container marketing mt-5">
           <!-- START THE FEATURETTES -->
-          <div
+          <!-- <div
             class="p-5 m-5 my-5 mx-auto text-grey rounded"
             style="background-color: #f5a98c"
           >
@@ -339,9 +342,9 @@
             </div>
           </div>
           <hr class="featurette-divider mt-5" />
-          <div class="row featurette">
-            <h3 class="text-center">Coming Soon..</h3>
-            <!-- <div class="col-md-7">
+          <div class="row featurette"> -->
+
+          <!-- <div class="col-md-7">
               <h2 class="featurette-heading">
                 Dr. Ashok K.
                 <span class="text-muted">Chauhan</span>
@@ -355,9 +358,9 @@
             <div class="col-md-5">
               <img class="d-block img-fluid" src="./static/ashok.jpg" alt="" />
             </div> -->
-          </div>
+        </div>
 
-          <!-- <hr class="featurette-divider" />
+        <!-- <hr class="featurette-divider" />
 
           <div class="row featurette">
             <div class="col-md-7 order-md-2">
@@ -381,7 +384,7 @@
           </div>
 
           <hr class="featurette-divider" /> -->
-          <!-- 
+        <!-- 
           <div class="row featurette">
             <div class="col-md-7">
               <h2 class="featurette-heading">
@@ -410,7 +413,7 @@
             </div>
           </div> -->
 
-          <!-- <hr class="featurette-divider" />
+        <!-- <hr class="featurette-divider" />
           <div class="row featurette">
             <div class="col-md-7">
               <h2 class="featurette-heading">
@@ -431,15 +434,13 @@
 
         <!-- Three columns of text below the carousel -->
         <div
-            class="p-5 m-5 my-5 mx-auto text-grey rounded"
-            style="background-color: #f5a98c"
-          >
-            <div class="px-0">
-              <h1 class="display-4 font-italic">
-                Our Collaborations
-              </h1>
-            </div>
+          class="p-5 m-5 my-5 mx-auto text-grey rounded"
+          style="background-color: #f5a98c"
+        >
+          <div class="px-0">
+            <h1 class="display-4 font-italic">Our Collaborations</h1>
           </div>
+        </div>
         <div class="row text-center m-5">
           <h3>Announcing soon..</h3>
           <div class="col-lg-4">
