--- a/messages/org-com.html
+++ b/messages/org-com.html
@@ -148,8 +148,9 @@
       <section class="container rounded" style="background: #fff">
         <div class="row p-5 mb-4">
           <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+            <h3>Announcing Soon..</h3>
             <!-- Card-->
-            <div class="card shadow-lg border-0 rounded">
+            <!-- <div class="card shadow-lg border-0 rounded">
               <div class="card-body p-0">
                 <img
                   src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-1_dewapk.jpg"
@@ -183,12 +184,12 @@
                   </ul>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
 
           <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
             <!-- Card-->
-            <div class="card shadow-lg border-0 rounded">
+            <!-- <div class="card shadow-lg border-0 rounded">
               <div class="card-body p-0">
                 <img
                   src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-3_ybnq8v.jpg"
@@ -222,12 +223,12 @@
                   </ul>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
 
           <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
             <!-- Card-->
-            <div class="card shadow-lg border-0 rounded">
+            <!-- <div class="card shadow-lg border-0 rounded">
               <div class="card-body p-0">
                 <img
                   src="https://res.cloudinary.com/mhmd/image/upload/v1570799924/profile-4_s3fort.jpg"
@@ -261,12 +262,12 @@
                   </ul>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
 
           <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
             <!-- Card-->
-            <div class="card shadow-lg border-0 rounded">
+            <!-- <div class="card shadow-lg border-0 rounded">
               <div class="card-body p-0">
                 <img
                   src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-2_ujssbj.jpg"
@@ -300,7 +301,7 @@
                   </ul>
                 </div>
               </div>
-            </div>
+            </div>-->
           </div>
         </div>
       </section>
@@ -320,12 +321,16 @@
                 ></a>
               </li>
               <li class="list-inline-item m-0">
-                <a href="https://instagram.com/amimun21?igshid=ndh9t257dsh" class="social-link"
+                <a
+                  href="https://instagram.com/amimun21?igshid=ndh9t257dsh"
+                  class="social-link"
                   ><i class="fa fa-instagram"></i
                 ></a>
               </li>
               <li class="list-inline-item m-0">
-                <a href="https://www.linkedin.com/company/amimunconference/" class="social-link"
+                <a
+                  href="https://www.linkedin.com/company/amimunconference/"
+                  class="social-link"
                   ><i class="fa fa-linkedin"></i
                 ></a>
               </li></ul
