--- a/index.html
+++ b/index.html
@@ -167,10 +167,7 @@
                 </h1>
                 <p></p>
                 <p>
-                  <a
-                    class="btn btn-lg btn-primary"
-                    href="./register/delegate_register.html"
-                    role="button"
+                  <a class="btn btn-lg btn-primary" href="#" role="button"
                     >Apply</a
                   >
                 </p>
