--- a/committees-gallery.html
+++ b/committees-gallery.html
@@ -135,7 +135,7 @@
           <h1 class="display-4 font-italic">Committees</h1>
           <p class="lead my-3">
             Amity International Model United Nations is a simulation of the
-            United Nations spanning over three days.
+            United Nations spanning over two days.
           </p>
         </div>
       </div>
