--- a/delegates/ga.html
+++ b/delegates/ga.html
@@ -64,12 +64,12 @@
                 <li>
                   <a
                     class="dropdown-item"
-                    href="../register/delegate_register.html"
+                    href="#"
                     >Delegate Application</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="../register/ip_register.html"
+                  <a class="dropdown-item" href="#"
                     >International Press Application</a
                   >
                 </li>
@@ -173,7 +173,7 @@
           <div class="col-md-5">
             <img
               class="d-block img-fluid"
-              src="../static/img-2-500x500.JPG"
+              src="../static/IMG_5886.JPG"
               alt=""
             />
           </div>
