--- a/gallery.html
+++ b/gallery.html
@@ -66,12 +66,12 @@
                 <li>
                   <a
                     class="dropdown-item"
-                    href="./register/delegate_register.html"
+                    href="#"
                     >Delegate Application</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="./register/ip_register.html"
+                  <a class="dropdown-item" href="#"
                     >International Press Application</a
                   >
                 </li>
@@ -226,8 +226,8 @@
         </div>
         <div class="row">
           <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-            <a href="./static/img-2.JPG" class="fancybox" rel="ligthbox">
-              <img src="./static/img-2.JPG" class="zoom img-fluid" alt="" />
+            <a href="./static/PSY00111.JPG" class="fancybox" rel="ligthbox">
+              <img src="./static/PSY00111.JPG" class="zoom img-fluid" alt="" />
             </a>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6 thumb">
@@ -302,8 +302,8 @@
         </div>
         <div class="row">
           <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-            <a href="./static/img-2.jpeg" class="fancybox" rel="ligthbox">
-              <img src="./static/img-2.jpeg" class="zoom img-fluid" alt="" />
+            <a href="./static/PSY00142.JPG" class="fancybox" rel="ligthbox">
+              <img src="./static/PSY00142.JPG" class="zoom img-fluid" alt="" />
             </a>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6 thumb">
@@ -394,9 +394,9 @@
             </a>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-            <a href="./static/DSC_4128-min.JPG" class="fancybox" rel="ligthbox">
+            <a href="./static/IMG_5908.JPG" class="fancybox" rel="ligthbox">
               <img
-                src="./static/DSC_4128-min.JPG"
+                src="./static/IMG_5908.JPG"
                 class="zoom img-fluid"
                 alt=""
               />
