--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@
                 <li>
                   <a
                     class="dropdown-item"
-                    href="./register/delegate_register.html"
+                    href="#"
                     >Delegate Application</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="./register/ip_register.html"
+                  <a class="dropdown-item" href="#"
                     >International Press Application</a
                   >
                 </li>
