--- a/committees-gallery.html
+++ b/committees-gallery.html
@@ -29,7 +29,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
       <div class="container-fluid">
         <a class="navbar-brand mx-1" href="index.html"
-          ><img src="./static/logo-main.svg" width="85px" alt=""
+          ><img src="./static/amimum-logo.svg" width="85px" alt=""
         /></a>
         <button
           class="navbar-toggler"
@@ -69,12 +69,12 @@
                 <li>
                   <a
                     class="dropdown-item"
-                    href="./register/delegate_register.html"
+                    href="#"
                     >Delegate Application</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="./register/ip_register.html"
+                  <a class="dropdown-item" href="#"
                     >International Press Application</a
                   >
                 </li>
