--- a/messages/org-com.html
+++ b/messages/org-com.html
@@ -65,12 +65,12 @@
                 <li>
                   <a
                     class="dropdown-item"
-                    href="../register/delegate_register.html"
+                    href="#"
                     >Delegate Application</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="../register/ip_register.html"
+                  <a class="dropdown-item" href="#"
                     >International Press Application</a
                   >
                 </li>
