--- a/about.html
+++ b/about.html
@@ -55,35 +55,6 @@
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
-                Apply Now
-              </a>
-              <ul
-                class="dropdown-menu"
-                aria-labelledby="navbarDropdownMenuLink"
-              >
-                <li>
-                  <a
-                    class="dropdown-item"
-                    href="#"
-                    >Delegate Application</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#"
-                    >International Press Application</a
-                  >
-                </li>
-              </ul>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="navbarDropdownMenuLink"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
                 Our Team
               </a>
               <ul
@@ -110,8 +81,34 @@
             <li class="nav-item">
               <a class="nav-link" href="committees-gallery.html">Committees</a>
             </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdownMenuLink"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Apply Now
+              </a>
+              <ul
+                class="dropdown-menu"
+                aria-labelledby="navbarDropdownMenuLink"
+              >
+                <li>
+                  <a class="dropdown-item" href="#">Delegate Application</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#"
+                    >International Press Application</a
+                  >
+                </li>
+              </ul>
+            </li>
+
             <li class="nav-item">
-              <a class="nav-link" href="gallery.html">Gallery</a>
+              <a class="nav-link" href="./gallery.html">Gallery</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">AMIMUN Club</a>
@@ -281,7 +278,8 @@
             <b>Our Vision</b> in Building the country and the general public is
             through giving collective, coordinated, and trans-social quality
             teaching and to be the worldwide leader in worth training and
-            supporting ability where <em>Modernity Blends with Tradition.</em> <br>
+            supporting ability where <em>Modernity Blends with Tradition.</em>
+            <br />
             <b>Our Mission</b> is to give education at all levels in all panels
             of current and modern events, developing frontier areas of
             knowledge, learning, and research and examination to build up the
