--- a/delegates/aippm.html
+++ b/delegates/aippm.html
@@ -12,7 +12,7 @@
       integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
       crossorigin="anonymous"
     />
-     <link
+    <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
@@ -55,35 +55,6 @@
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
-                Apply Now
-              </a>
-              <ul
-                class="dropdown-menu"
-                aria-labelledby="navbarDropdownMenuLink"
-              >
-                <li>
-                  <a
-                    class="dropdown-item"
-                    href="#"
-                    >Delegate Application</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#"
-                    >International Press Application</a
-                  >
-                </li>
-              </ul>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="navbarDropdownMenuLink"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
                 Our Team
               </a>
               <ul
@@ -98,9 +69,7 @@
                   >
                 </li>
                 <li>
-                  <a
-                    class="dropdown-item"
-                    href="../messages/sec.html"
+                  <a class="dropdown-item" href="../messages/sec.html"
                     >Secretariat</a
                   >
                 </li>
@@ -112,8 +81,36 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../committees-gallery.html">Committees</a>
+              <a class="nav-link" href="../committees-gallery.html"
+                >Committees</a
+              >
             </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdownMenuLink"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Apply Now
+              </a>
+              <ul
+                class="dropdown-menu"
+                aria-labelledby="navbarDropdownMenuLink"
+              >
+                <li>
+                  <a class="dropdown-item" href="#">Delegate Application</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#"
+                    >International Press Application</a
+                  >
+                </li>
+              </ul>
+            </li>
+
             <li class="nav-item">
               <a class="nav-link" href="../gallery.html">Gallery</a>
             </li>
@@ -177,7 +174,6 @@
           </div>
         </div>
 
-
         <!-- /END THE FEATURETTES -->
       </div>
       <!-- /.container -->
@@ -197,12 +193,16 @@
                 ></a>
               </li>
               <li class="list-inline-item m-0">
-                <a href="https://instagram.com/amimun21?igshid=ndh9t257dsh" class="social-link"
+                <a
+                  href="https://instagram.com/amimun21?igshid=ndh9t257dsh"
+                  class="social-link"
                   ><i class="fa fa-instagram"></i
                 ></a>
               </li>
               <li class="list-inline-item m-0">
-                <a href="https://www.linkedin.com/company/amimunconference/" class="social-link"
+                <a
+                  href="https://www.linkedin.com/company/amimunconference/"
+                  class="social-link"
                   ><i class="fa fa-linkedin"></i
                 ></a>
               </li></ul
