--- a/gallery.html
+++ b/gallery.html
@@ -57,35 +57,6 @@
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
-                Apply Now
-              </a>
-              <ul
-                class="dropdown-menu"
-                aria-labelledby="navbarDropdownMenuLink"
-              >
-                <li>
-                  <a
-                    class="dropdown-item"
-                    href="#"
-                    >Delegate Application</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#"
-                    >International Press Application</a
-                  >
-                </li>
-              </ul>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="navbarDropdownMenuLink"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
                 Our Team
               </a>
               <ul
@@ -112,6 +83,32 @@
             <li class="nav-item">
               <a class="nav-link" href="committees-gallery.html">Committees</a>
             </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdownMenuLink"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Apply Now
+              </a>
+              <ul
+                class="dropdown-menu"
+                aria-labelledby="navbarDropdownMenuLink"
+              >
+                <li>
+                  <a class="dropdown-item" href="#">Delegate Application</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#"
+                    >International Press Application</a
+                  >
+                </li>
+              </ul>
+            </li>
+
             <li class="nav-item">
               <a class="nav-link" href="gallery.html">Gallery</a>
             </li>
@@ -395,11 +392,7 @@
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6 thumb">
             <a href="./static/IMG_5908.JPG" class="fancybox" rel="ligthbox">
-              <img
-                src="./static/IMG_5908.JPG"
-                class="zoom img-fluid"
-                alt=""
-              />
+              <img src="./static/IMG_5908.JPG" class="zoom img-fluid" alt="" />
             </a>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6 thumb">
