--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
-                Team
+               Our Team
               </a>
               <ul
                 class="dropdown-menu"
