--- a/delegates/hrc.html
+++ b/delegates/hrc.html
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
       <div class="container-fluid">
         <a class="navbar-brand mx-1" href="../index.html"
-          ><img src="../static/amimum-logo.svg" width="55px" alt=""
+          ><img src="../static/amimum-logo.svg" width="85px" alt=""
         /></a>
         <button
           class="navbar-toggler"
@@ -55,35 +55,6 @@
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
-                Apply Now
-              </a>
-              <ul
-                class="dropdown-menu"
-                aria-labelledby="navbarDropdownMenuLink"
-              >
-                <li>
-                  <a
-                    class="dropdown-item"
-                    href="#"
-                    >Delegate Application</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#"
-                    >International Press Application</a
-                  >
-                </li>
-              </ul>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle "
-                href="#"
-                id="navbarDropdownMenuLink"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
                 Our Team
               </a>
               <ul
@@ -98,9 +69,7 @@
                   >
                 </li>
                 <li>
-                  <a
-                    class="dropdown-item"
-                    href="../messages/sec.html"
+                  <a class="dropdown-item" href="../messages/sec.html"
                     >Secretariat</a
                   >
                 </li>
@@ -112,8 +81,36 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../committees-gallery.html">Committees</a>
+              <a class="nav-link" href="../committees-gallery.html"
+                >Committees</a
+              >
             </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdownMenuLink"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Apply Now
+              </a>
+              <ul
+                class="dropdown-menu"
+                aria-labelledby="navbarDropdownMenuLink"
+              >
+                <li>
+                  <a class="dropdown-item" href="#">Delegate Application</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#"
+                    >International Press Application</a
+                  >
+                </li>
+              </ul>
+            </li>
+
             <li class="nav-item">
               <a class="nav-link" href="../gallery.html">Gallery</a>
             </li>
