--- a/messages/sec.html
+++ b/messages/sec.html
@@ -21,6 +21,7 @@
     <title>AMIMUN '21 | Team</title>
   </head>
   <body class="example">
+    
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
       <div class="container-fluid">
@@ -46,35 +47,6 @@
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link" href="../about.html">About</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="navbarDropdownMenuLink"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Apply Now
-              </a>
-              <ul
-                class="dropdown-menu"
-                aria-labelledby="navbarDropdownMenuLink"
-              >
-                <li>
-                  <a
-                    class="dropdown-item"
-                    href="#"
-                    >Delegate Application</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#"
-                    >International Press Application</a
-                  >
-                </li>
-              </ul>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -115,6 +87,32 @@
                 >Committees</a
               >
             </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdownMenuLink"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Apply Now
+              </a>
+              <ul
+                class="dropdown-menu"
+                aria-labelledby="navbarDropdownMenuLink"
+              >
+                <li>
+                  <a class="dropdown-item" href="#">Delegate Application</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#"
+                    >International Press Application</a
+                  >
+                </li>
+              </ul>
+            </li>
+
             <li class="nav-item">
               <a class="nav-link" href="../gallery.html">Gallery</a>
             </li>
