--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
             <div class="container">
               <div class="carousel-caption text-end">
-                <h1>Glimpse of AMIMUN 2020</h1>
+                <h1>Glimpses of AMIMUN 2020</h1>
                 <p></p>
                 <p>
                   <a
